Cambio de rutas en imágenes

--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -8,25 +8,25 @@ hide:
 ## Acceso a Github 
 En este primer paso comencé por seguir los tutoriales dispiestos en el móduo para lograr establecer mi página web, lo primero es acceder a Github para poder tener acceso al repositorio global
 
-<div align="center"><img src="/images/MT01/creargithub.png" /></div>
+<div align="center"><img src="images/MT01/creargithub.png" /></div>
 
  
 En mi caso ya cuento con un usuario de Github, simplemente agregué algo de información y actualicé mi perfil para estar presentable en este nuevo desafío 😀
 
-<div align="center"><img src="/images/MT01/perfil_github.png" /></div>
+<div align="center"><img src="images/MT01/perfil_github.png" /></div>
 
 
 ## Instalación y seteo de git
 
-<div align="center"><img src="/images/MT01/insgit.png" /></div>
+<div align="center"><img src="images/MT01/insgit.png" /></div>
 
 Lo primero claramente es descargar el software al equipo, en mi caso con sistema operativo windows 8 :’/
 
-<div align="center"><img src="/images/MT01/descarga_git.png" /></div>
+<div align="center"><img src="images/MT01/descarga_git.png" /></div>
 
 Al momento de ejecutar el instalador básicamente es necesario darle siguiente a todo hasta tener en el equipo estos programas disponibles. Al terminar la instalación se ejecuta automáticamente el interfaz de git bash.
 
-<div align="center"><img src="/images/MT01/gitbash.png" /></div>
+<div align="center"><img src="images/MT01/gitbash.png" /></div>
 
 Este es una aplicación para entornos de Microsoft Windows que ofrece una capa de emulación para una experiencia de líneas de comandos de Git. Bash es el acrónimo en inglés de Bourne Again Shell. https://www.atlassian.com/es/git/tutorials/git-bash#:~:text=Git%20Bash%20es%20una%20aplicaci%C3%B3n,ingl%C3%A9s%20de%20Bourne%20Again%20Shell. 
 
@@ -47,11 +47,11 @@ Para verificar el nombre o el correo electrónico configurado actualmente en git
 
 git config --global --list
 
-<div align="center"><img src="/images/MT01/usuario.png" /></div>
+<div align="center"><img src="images/MT01/usuario.png" /></div>
 
 ## ssh key
 
-<div align="center"><img src="/images/MT01/generarssh.png" /></div>
+<div align="center"><img src="images/MT01/generarssh.png" /></div>
 
 Una clave SSH es una credencial de acceso en el protocolo SSH . Su función es similar a la de los nombres de usuario y las contraseñas, pero las claves se utilizan principalmente para procesos automatizados y para implementar el inicio de sesión único por parte de administradores de sistemas y usuarios avanzados.
 
@@ -59,50 +59,50 @@ Para la generación de la ssh key se utiliza el comando ssh-keygen -t rsa -C “
 
 En mi caso el comando  cat ~/.ssh/id_rsa.pub para acceder a la ssh key recientemente creada muestra la siguiente cadena. 
 
-<div align="center"><img src="/images/MT01/ssh_key_engit.png" /></div>
+<div align="center"><img src="images/MT01/ssh_key_engit.png" /></div>
 
 Por último es necesario pegar la ssh key en github accediendo a Settings>SSH and GPG keys>New SSH Key.
 
-<div align="center"><img src="/images/MT01/ssh%20hey.png" /></div>
+<div align="center"><img src="images/MT01/ssh%20hey.png" /></div>
 
 ## Creación del Fork
 
-<div align="center"><img src="/images/MT01/fork_template.png" /></div>
+<div align="center"><img src="images/MT01/fork_template.png" /></div>
 
 En este punto fue necesario acceder al <A HREF="https://fablabbcn.github.io/efdi-template/"> efdi-template </A> proporcionado, cliquear en la esquina superior derecha (Name : Github Repo) para dirigirnos al repositorio de Github. Una vez allí es necesario crear el fork, con nuestro usuario como owner se debe nombrar al repositorio con el formato nombre_apellido.
 
-<div align="center"><img src="/images/MT01/gitperfil.png" /></div>
+<div align="center"><img src="images/MT01/gitperfil.png" /></div>
 
 Una vez completado este paso ya tenemos listo el repositorio remoto con un template de sitio web listo para editar.
 ## Repositorio local
 
-<div align="center"><img src="/images/MT01/repolocal.png" /></div>
+<div align="center"><img src="images/MT01/repolocal.png" /></div>
 
 Este es un paso necesario para obtener una copia del repositorio remoto en nuestros equipos, a esto se le denomina “Clone”. Lo primero es crear una carpeta en nuestro equipo, esto podemos hacerlo de la manera convencional con click derecho>New folder o mediante el Git Bash con los comandos mkdir newfolder.
 
-<div align="center"><img src="/images/MT01/repo.png" /></div>
+<div align="center"><img src="images/MT01/repo.png" /></div>
 
 Ya creada la carpeta donde se almacenará nuestro repositorio copiamos el link de nuestro repositorio remoto en Github para clonarlo en el repositorio local mediante el comando git clone. 
 
-<div align="center"><img src="/images/MT01/gitclone.png" /></div>
+<div align="center"><img src="images/MT01/gitclone.png" /></div>
 
 ## Obtener el link del sitio web 
 
-<div align="center"><img src="/images/MT01/activar_link.png" /></div>
+<div align="center"><img src="images/MT01/activar_link.png" /></div>
 
 Para obtener el link a nuestro sitio web debemos dirigirnos a la pestaña Settings>Pages>Visit site en Github. Pero primero debemos hacer una primera modificación seguida de un push para poder configurar la opción de GitHub Pages.
 
 El software elegido para la edición de los archivos es Visual Studio Code (v1.79.2), para ello descargamos desde el sitio web de visual studio code, ejecutamos el programa y abrimos el repositorio local en el mismo. En mi caso al realizar el primer commit tuve autorizar el git credential manager. 
 
-<div align="center"><img src="/images/MT01/vscode.png" /></div>
-<div align="center"><img src="/images/MT01/credenciales_github.png" /></div>
-<div align="center"><img src="/images/MT01/primer_cambio.png" /></div>
-<div align="center"><img src="/images/MT01/gh_pages.png" /></div>
+<div align="center"><img src="images/MT01/vscode.png" /></div>
+<div align="center"><img src="images/MT01/credenciales_github.png" /></div>
+<div align="center"><img src="images/MT01/primer_cambio.png" /></div>
+<div align="center"><img src="images/MT01/gh_pages.png" /></div>
 
 Una vez seleccionada la opción gh-pages  y salvando la acción ya deberíamos obtener el enlace a nuestro sitio web, para ver esto podemos dirigirnos a actions>pages build and deployment.
 
-<div align="center"><img src="/images/MT01/page_build.png" /></div>
+<div align="center"><img src="images/MT01/page_build.png" /></div>
 
 Bueno, ahora si, toca poner manos a la obra con este sitio web! Sitio donde alojar primeros avances, pifiadas, aciertos y hasta los más importantes resultados obtenidos. Dejo por acá una captura de pantalla de lo que es el home del sitio al día de hoy. 
 
-<div align="center"><img src="/images/MT01/webhoy.png" /></div>
+<div align="center"><img src="images/MT01/webhoy.png" /></div>
