--- a/docs/diseno/md01.md
+++ b/docs/diseno/md01.md
@@ -59,7 +59,7 @@ En este punto se busca mapear la idea de proyecto de manera multiescalar para en
 
 <div align="center"><img src="../images/MD01/escalas.png"></div>
 
-<div align="center"><img src="../images/MD01/espaciomultiescalar.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/espaciomultiescalar.png"></div>
 
 ## Ejercicio clase 2 ALTERNATIVE PRESENTS
 
