Prueba ruta nueva

--- a/docs/diseno/md01.md
+++ b/docs/diseno/md01.md
@@ -6,7 +6,7 @@ hide:
 # MD01 - Proyecto y contexto 
 
 ## AoWS & espacios de diseño
-<div align="center"><img src="../images/MD01/AtlasWeakSignals_1-1200x900.jpg"></div>
+![](../images/MD01/AtlasWeakSignals_1-1200x900.jpg")
 ¿Qué es una señal débil?
 
 Una señal débil es un indicador de un problema potencialmente emergente, que puede volverse significativo en el futuro.
