Cambios en ruta (link de repo global)

--- a/docs/diseno/md01.md
+++ b/docs/diseno/md01.md
@@ -1,16 +1,11 @@
----
-hide:
-    - toc
----
-
 # MD01 - Proyecto y contexto 
 
 ## AoWS & espacios de diseño
-![](../images/MD01/AtlasWeakSignals_1-1200x900.jpg")
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/AtlasWeakSignals_1-1200x900.jpg"></div>
 ¿Qué es una señal débil?
 
 Una señal débil es un indicador de un problema potencialmente emergente, que puede volverse significativo en el futuro.
-<div align="center"><img src="../images/MD01/grafic.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/grafic.png"></div>
  Las señales débiles complementan el análisis de tendencias y pueden utilizarse para ampliar futuros alternativos.
 
 <A HREF="https://www.sitra.fi/en/articles/what-is-a-weak-signal/#:~:text=A%20weak%20signal%20is%20an%20existing%20thing%20or%20phenomenon%20that,event%20that%20describes%20the%20subject">+info </A>
@@ -18,11 +13,11 @@ Una señal débil es un indicador de un problema potencialmente emergente, que p
 ## 00.
 
 Lo primero es contar con un Espacio de Diseño. Nos apoyaermos de la plataforma <A HREF="https://miro.com/">miro </A> para poder empezar a diseñar algunos futuros emergentes 🚀
-<div align="center"><img src="../images/MD01/espaciodedise%C3%B1o.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/espaciodedise%C3%B1o.png"></div>
 
 ## 01.
 Comenzaremos por elegir dos cartas a ciegas, como en un tarot, las dos cartas elegidas serán las señales débiles para este ejercicio.
-<div align="center"><img src="../images/MD01/se%C3%B1alesdebiles.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/se%C3%B1alesdebiles.png"></div>
 
 Tocó jugar con Technology for equality y Reconfigure your Body, dos cartas muy interesantes que increíblemente parecen estar en armonía con las ideas que han estado rondando en mi cabeza este último tiempo, veamos cómo sigue la dinámica y que surge de todo esto.
 
@@ -33,13 +28,13 @@ Toca colocar las señales débiles elegidas en el Design Space, boca arriba, en 
 ¿Qué crees que son?
 
 Si debiera describirlas en una frase creo que sería: “Cómo potenciar las herramientas tecnológicas para que estas promuevan un acceso democrático y como éstas nos pueden asistir como una extensión de nuestro cuerpo”.
-<div align="center"><img src="../images/MD01/punteose%C3%B1alesdebiles.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/punteose%C3%B1alesdebiles.png"></div>
 
 ## 03.
 
 En este punto nos toca mirar algunas Áreas de Oportunidad que se están usando en Fab Lab Barcelona para prototipar futuros emergentes. Entre estas debimos elegir dos cartas a ciegas nuevamente, y colócalas en el Espacio de Diseño.
 
-<div align="center"><img src="../images/MD01/areasdeoportunidad.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/areasdeoportunidad.png"></div>
 
 Ya se puede empezar a ver posibles interconexiones que emergen de la triangulación de las tarjetas, surgen conceptos tales cómo Digital Fabrication, Maker Education, Coding, Design for Social Innovation, STEAM, Prototyping, Aprendizaje Basado en Proyectos y Maker Comunity.
 
@@ -47,9 +42,9 @@ Ya se puede empezar a ver posibles interconexiones que emergen de la triangulaci
 
 Toca escoger dos de todos los Conceptos Detonantes dispuestos abajo. Estas serán palabras clave o campos de investigación  con los que estamos trabajando y prototipando en esta sesión. La idea es que estas tarjetas pueden ayudar a encontrar oportunidades o relaciones que no se han pensado aún.
 
-<div align="center"><img src="../images/MD01/conceptosdetonantes.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/conceptosdetonantes.png"></div>
 
-<div align="center"><img src="../images/MD01/detonantess.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/detonantess.png"></div>
 
 Trabajaré con las tarjetas Open source Innovation y Local Materials Recirculation, me imagino a estas tarjetas cohabitando en un escenario de reutilización de materiales de desecho cómo pueden ser las botellas de plástico PET dándole una vuelta de rosca a las tecnologías de fabricación digital existentes disponiendo un kit de prototipado para instituciones educativas/clubes maker de código abierto y de bajo costo.
 
@@ -57,7 +52,7 @@ Trabajaré con las tarjetas Open source Innovation y Local Materials Recirculati
 
 En este punto se busca mapear la idea de proyecto de manera multiescalar para encontrar recursos, infraestructura , referentes y posibilidades reales de co-desarrollo e intervención. Se usan las siguientes categorías para organizar la información en diferentes niveles.
 
-<div align="center"><img src="../images/MD01/escalas.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/escalas.png"></div>
 
 <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/espaciomultiescalar.png"></div>
 
@@ -69,7 +64,7 @@ De las áreas de interés a los presentes alternativos:
 
 Ahora vamos un paso más allá e intentemos describir los presentes alternativos que van surgiendo de nuestro espacio de diseño, experimentos y acciones. Los escribimos en presente y en primera persona ofreciendo como apoyo una serie de ejemplos de todo lo que hemos estado haciendo.
 
-<div align="center"><img src="../images/MD01/clase2.png" /></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MD01/clase2.png" /></div>
 
 Aquí les comparto una previzualización del tablero dónde estuvimos trabajando!
 
