--- a/docs/tecnicos/mt01.md
+++ b/docs/tecnicos/mt01.md
@@ -88,21 +88,21 @@ Ya creada la carpeta donde se almacenará nuestro repositorio copiamos el link d
 
 ## Obtener el link del sitio web 
 
-<div align="center"><img src="../images/MT01/activar_link.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT01/activar_link.png"></div>
 
 Para obtener el link a nuestro sitio web debemos dirigirnos a la pestaña Settings>Pages>Visit site en Github. Pero primero debemos hacer una primera modificación seguida de un push para poder configurar la opción de GitHub Pages.
 
 El software elegido para la edición de los archivos es Visual Studio Code (v1.79.2), para ello descargamos desde el sitio web de visual studio code, ejecutamos el programa y abrimos el repositorio local en el mismo. En mi caso al realizar el primer commit tuve autorizar el git credential manager. 
 
-<div align="center"><img src="../images/MT01/vscode.png"></div>
-<div align="center"><img src="../images/MT01/credenciales_github.png"></div>
-<div align="center"><img src="../images/MT01/primer_cambio.png"></div>
-<div align="center"><img src="../images/MT01/gh_pages.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT01/vscode.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT01/credenciales_github.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT01/primer_cambio.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT01/gh_pages.png"></div>
 
 Una vez seleccionada la opción gh-pages  y salvando la acción ya deberíamos obtener el enlace a nuestro sitio web, para ver esto podemos dirigirnos a actions>pages build and deployment.
 
-<div align="center"><img src="../images/MT01/page_build.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT01/page_build.png"></div>
 
 Bueno, ahora si, toca poner manos a la obra con este sitio web! Sitio donde alojar primeros avances, pifiadas, aciertos y hasta los más importantes resultados obtenidos. Dejo por acá una captura de pantalla de lo que es el home del sitio al día de hoy. 
 
-<div align="center"><img src="../images/MT01/webhoy.png"></div>
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT01/webhoy.png"></div>
