--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -1,10 +1,57 @@
----
-hide:
-    - toc
----
+# MT02 - Diseño 2D y modelado 3D
 
-# MT02
+## Diseño 2D
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+Para abordar la temática del módulo técnico 02 Diseño 2D y modelado 3D comenzaremos por abordar el desafío propuesto cómo entrega de este apartado, para el diseño 2D: el logo.
 
-![](../images/MT01/scorpio_blow.jpg)
+### 01. 
+
+Generar un logo utilizando una de las herramientas vectoriales presentadas. Se recomienda generar al menos parte del logo a través de la vectorización de una imagen pixelar.
+
+Lo primero fue elegir las imágenes que representan algo para nuestro proyecto, para la primera versión del logo se utilizarán tres componentes icónicos para la primer etapa del proyecto, los mismos son: 
+
+1- la botella de pet descartada
+
+2- la pistola de silicona 
+
+3- el extrusor de impresora 3D  
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/Combo.jpg"></div>
+
+Una vez seleccionadas las imágenes (en formatos jpg y png) deberemos importarlas en el software de edición elegido para esta etapa, el grán amigo Inkscape, las imágenes fueron importadas con los siguientes parámetros.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/opcionesdeimportacion.png"></div>
+
+Ahora deberemos vectorizar las imágenes elegidas para poderlas procesar, para ello, con la imágen a vectorizar seleccionada, en la barra superior nos dirigimos a Trayecto>vectorizar mapa de bits. 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/vectorizaramapadebits.png"></div>
+
+En el caso del extrusor la mejor configuración lograda fue la presentada a continuación.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/vectorizaramapadebits2.png"></div>
+
+Realizando el mismo proceso para las demás imágenes ya tenemos los vectores de los tres archivos para poder editar un poco los vectores para intentar representar la idea inicial.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/archivosvectorizados.png"></div>
+
+Para editar los vectores se optó por arrastrar algunos de los puntos de los diferentes archivos para que tengan la relación buscada, también buscamos cambiarles los colores a algunas partes y por último se exportó el archivo en formato SVG.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/logoV1.png"></div>
+
+Para obtener una versión del logo simplificado se realizó el mismo proceso de obtención de mapa de bits para la imágen anterior pero en esta oportunidad con la opción de cuantificación de color.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/logov1simple.png"></div>
+
+De esta manera se obtiene un logo en “blanco y negro” que más adelante nos permitirá generar un relieve un poco más prolijo en cualquier superficie.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/logoV1_BN.png"></div>
+
+### Extra
+
+Vamos a ver cómo queda (si queda) este logo como favicon en el link de la página web! 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/favicon1.png"></div>
+
+## Modelado 3D
+
+### Sitio en construcción 
