--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -52,6 +52,10 @@ Vamos a ver cómo queda (si queda) este logo como favicon en el link de la pági
 
 <div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/favicon1.png"></div>
 
+En primera instancia me dirigí a la página oficial de favicon para realizar el proceso de obtención del archivo .ico, esto no funcionó al primer intento, revisando el mkdocs noté que acepta directamente el svg…
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/favicon2.png"></div>
+
 ## Modelado 3D
 
 ### Sitio en construcción 
