--- a/docs/tecnicos/mt02.md
+++ b/docs/tecnicos/mt02.md
@@ -58,4 +58,38 @@ En primera instancia me dirigí a la página oficial de favicon para realizar el
 
 ## Modelado 3D
 
-### Sitio en construcción 
+En este apartado se intentarán abordar diferentes herramientas para el modelado 3D de diferentes piezas, algunas relacionadas con el proyecto final y otras que no tienen ninguna relación pero servirán para ejercitar diferentes alternativas.
+
+### 02. Modelo 3D manivela 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/filamachine.png"></div>
+
+Lo primero que decidí modelar para la entrega de este módulo técnico es una parte del kit de extrusión manual que se está desarrollando para el desarrollo de talleres de reciclaje de botellas pet para la generación de filamento para impresión 3D. Concretamente, la pieza a modelar será la manivela que dará tracción a la bobina que recoge el filamento al final del proceso. 
+
+Como primer paso deberemos posicionarnos en el espacio de trabajo ya sea creando un plano nuevo, utilizando los planos de origen o en este caso al estar comenzado el proyecto, seleccionando alguna cara a conveniencia. 
+
+De todas formas me pareció más fácil y dinámico documentar el proceso en un video realizando el paso a paso.
+
+<div align="center"><iframe width="560" height="315" src="https://www.youtube.com/embed/uf-e4J6PH6U?si=tKwElcIljHDSqOtX" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+
+### 03. Logo en relieve 
+
+Para lograr ubicar el logo en relieve sobre el modelo creado a juzgar por el espacio disponible y las características del mismo considero que podría ser una buena opción pensar en el logo como un grabado láser, quizá en acrílico incrustado en la madera.
+
+Lo primero fue obtener un DXF del logo para poderlo usar en un boceto de Onshape. Para ello usamos Inkscape, seleccionando el mapa de bits de nuestro logo nos dirigimos a Archivo>Guardar como… Posteriormente seleccionamos la extensión DXF y nombramos el archivo a guardar, por último seleccionamos las unidades en milímetros y listo.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/exportdxf.png"></div>
+
+Ahora podemos importar el archivo dxf en onshape agregándolo a nuestro espacio de trabajo, para agregarlo al modelo debemos definir dónde lo vamos a extruir (en este caso será en el brazo de la manivela). Creamos un boceto nuevo sobre la superficie y ya podremos importar el DXF, posteriormente se escala y se centra para finalmente ser extruido.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/importdxf.png"></div>
+
+Cómo ya se definió anteriormente, la extrusión del logo busca simular un injerto de acrílico grabado en láser, para lo que fue necesario extruir para generar una nueva pieza cilíndrica,  obteniendo el siguiente resultado.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT02/grabadoacrilico.png"></div>
+
+
+### Prueba de funcionamiento Manivela
+
+<div align="center"><iframe width="315" height="560" src="https://www.youtube.com/embed/92bcGKYHYZU" title="Prueba de funcionamiento - Manivela" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
