Módulos de innovación

--- a/docs/innovacion/mi03.md
+++ b/docs/innovacion/mi03.md
@@ -2,8 +2,8 @@
 
 # Innovación y Sostenibilidad
 
-## MI01 Innovación abierta y distribuida 
+MI01 Innovación abierta y distribuida 
 
 MI02 Desarrollo sostenible y economía circular 
 
-MI03 Emprendimiento.
+## MI03 Emprendimiento.
