--- a/docs/innovacion/mi01.md
+++ b/docs/innovacion/mi01.md
@@ -7,3 +7,40 @@
 MI02 Desarrollo sostenible y economía circular 
 
 MI03 Emprendimiento.
+
+### Clase 01.
+
+En esta primera etapa del módulo de innovación tuvimos el agrado de ser guiados por <A HREF="https://distributeddesign.eu/talent/paola-zanchetta/Muñoz">Paola Zanchetta </A>  quien de profesión es diseñadora, creadora e investigadora motivada por promover prácticas regenerativas y despertar la conciencia ambiental trabajando con materiales de desecho en el contexto del código abierto.
+
+Nos presentó dos de los proyectos en los cuales estuvo trabajando y realmente son muy interesantes.
+
+El primero, <A HREF="https://www.fictionfactory.nl/en/sustainability/found-objects/">Found Objects </A> es una herramienta de diseño de código abierto que transforma residuos de madera residual de cortes en CNC en un nuevo material de construcción.
+
+El segundo titulado <A HREF="https://foregoing-clutch-488.notion.site/Design-Residency-Brenchies-Lab-Aruba-2022-Paola-Zanchetta-9996ec11cc5142e38412ec5bc001843c">PET Waste to Value </A> es un programa que busca repensar el ciclo de vida de los residuos plásticos PET producidos localmente en Aruba, transformándolos en materiales y productos valiosos con tecnologías de fabricación digital.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI01/Presentacion.png"></div>
+
+La dinámica comenzó con una breve presentación grupal en la cual pudimos conocernos mutuamente y ya comenzar a trabajar sobre  los diferentes conceptos que necesitamos tener presente a la hora de hablar de innovación.
+
+Comenzamos por aportar nuestra perspectiva sobre algunas cuestiones presentadas en los siguientes cuestionarios. 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI01/cuestionario1.png"></div>
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI01/cuestionario2.png"></div>
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MI01/cuestionario3.png"></div>
+
+Para finalizar la clase se nos propuso un ejercicio en el cual deberíamos bajar estos conceptos pero ahora con nuestros proyectos.
+
+### Clase 02.
+
+Para finalizar, en la clase se nos propuso un ejercicio en el cual deberíamos bajar estos conceptos pero ahora con nuestros proyectos. 
+
+
+
+Los resultados obtenidos quedaron planteados en mi área de trabajo en Miro.
+
+<div align="center"><iframe src="https://miro.com/app/board/uXjVKMo0rPU=/?moveToWidget=3458764588828194004&cot=10" width="800" height="700"></iframe></div>
+   
+
+
