--- a/docs/tecnicos/mt03.md
+++ b/docs/tecnicos/mt03.md
@@ -1,10 +1,76 @@
----
-hide:
-    - toc
----
+# MT03 - Corte láser controlado por computadora 
 
-# MT02
+## Diseño paramétrico
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+¿Qué es el Diseño Paramétrico?
 
-![](../images/MT01/scorpio_blow.jpg)
+El diseño paramétrico es un solución CAD en 3D, mediante la que se crea un modelo a través de datos que se ingresan en un software, que es capaz de traducirlos mediante ecuaciones en formas virtuales que se actualizan al momento, facilitando la obtención de un diseño final y reduciendo las actividades rutinarias.
+
+<A HREF="https://www.autodeskjournal.com/que-es-diseno-parametrico-conceptos-aportes-ingenieria/"> +info </A>
+
+
+Para abordar la temática del módulo técnico 03 Corte láser controlado por computadora comenzamos por abordar el desafío propuesto en clase. 
+
+### Warm-UP Parametrizamos un croissant mediante un ejercicio grupal en miro.
+
+En este ejercicio se nos planteó el desafío de pensar y plantear el proceso de diseño de un bizcocho de croissant. Este desafío me pareció bastante interesante y alocado ya que al tratarse de una figura irregular pero con cierta simetría el proceso de diseño podría abordarse de múltiples maneras, de hecho así fue. 
+
+Si bien cada integrante del equipo logró dar con el diseño desde cada abordaje, en mi caso opté por realizar un proceso de “barrido” por lo que creé varias secciones y una guía que los conecte para realizar la operación.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/croissant.png"></div>
+
+### Proceso de diseño paramétrico mediante CAD
+
+
+Para este proceso opté por utilizar Onshape para el diseño de una maqueta del marco de un cnc que busca combinar el principio de funcionamiento de una impresora de tipo delta y el de un robot de cables paralelos.
+
+Para lograr esto comencé por crear un dibujo o bosquejo de la idea, ilustrando la geometría, las diferentes piezas y las medidas a parametrizar de la estructura.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/Bosquejo.png"></div>
+
+Lo que sigue es comenzar con el proceso de diseño asistido por computadora en Onshape, para explicar mejor el proceso opté por dejar el paso a paso en un video.
+
+<div align="center"><iframe width="640" height="360" src="https://www.youtube.com/embed/b75h8IQIxh4" title="Parametrización en Onshape" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></div>
+
+### Nesting
+
+Para lograr optimizar al máximo el material a utilizar se optó por utilizar una herramienta diseñada para esto, la herramienta utilizada se llama deepnest. 
+
+Lo primero que necesitamos es tener los archivos a cortar, para lo que debemos exportar las caras de nuestras piezas desde Onshape, cliqueando click derecho sobre cada cara y seleccionando la opción exportar cómo dxf/dwg. 
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/exportardxf.png"></div>
+
+Una vez abierto el deepnest debemos comenzar por importar los archivos mediante el boton de importar.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/importardxf.png"></div>
+
+
+Una vez importados todos los archivos ya podemos agregar la lámina con las medidas del material disponible y así delimitar el área dónde se agruparán los archivos.También podemos duplicar cuantas veces queramos cada archivo por separado.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/agregarhoja.png"></div>
+
+Por último le damos a start nest y cuando tengamos un resultado aceptable detenemos el nesting y presionamos exportar. Podemos optar por guardar dxf o svg.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/deepnestdxf.png"></div>
+
+Ojo que estos archivos se deben guardar sin extensión, una vez guardados deberemos editar el nombre del archivo y agregarle el .dxf o .svg según corresponda.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/adddxf.png"></div>
+
+### RDWorks
+
+En este punto ya podemos comenzar a setear parámetros del software encargado de pasar nuestros vectores a código máquina o código CNC. Lo primero será importar el archivo dxf extraído de deepnest.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/dxfRD.png"></div>
+
+
+
+Antes de seguir con el raster de nuestro logo, es muy importante que además de optimizar el área a utilizar en el corte se optimice el tiempo de corte y el tiempo en los trayectos del cabezal, para ello aprovechamos que en deepnest se configuró una distancia de 0 mm entre líneas de diferentes archivos para que se superpongan y con la herramienta delete overlap lograremos evitar que se corte repetidamente un mismo vector. En la siguiente imágen se puede apreciar la diferencia.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/deleteoverload.png"></div>
+
+Por último, es posible que al cargar una imágen png el intérprete de bitmps falle o no tome lo que necesitamos mostrar en nuestro diseño, para ello podemos usar el Bitmap handle para corregir estos parámetros de brillo y contraste hasta que se vea nítido.
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/logo.png"></div>
+
+<div align="center"><img src="https://github.com/wwwteo/mateo_olivera/raw/main/docs/images/MT03/logo2.png"></div>
